--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>我的网站</title>
+    <title>蓝牙耳机</title>
 </head>
 <body>
     <h1>欢迎访问我的网站！</h1>
-    <p>这是一个临时主页，稍后我会完善内容......。</p>
+    <p>蓝牙耳机 lyej.cn ，稍后我会完善内容。</p>
 </body>
 </html>
