--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
         window.onload = function() {
             const targetUrl = "https://45d.cn"; // 目标 URL
-            const fallbackUrl = "/index.htm"; // 备用页面
+            const fallbackUrl = "/weihu.htm"; // 备用页面
             checkUrl(targetUrl, fallbackUrl);
         };
     </script>
