--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <script>
         window.onload = function() {
             // 检查是否成功跳转到目标网站
-            const targetUrl = "https://45d.cn";
+            const targetUrl = "https://ya0.cn";
             fetch(targetUrl, { method: 'HEAD', mode: 'no-cors' })
                 .catch(() => {
                     // 如果发生错误，跳转到维护页面
-                    window.location.href = "/index.htm";
+                    window.location.href = "/weihu.htm";
                 });
         };
     </script>
