--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>页面跳转</title>
     <!-- 尝试跳转到目标网站 -->
-    <meta http-equiv="refresh" content="0;url=https://45d.cn">
+    <meta http-equiv="refresh" content="0;url=https://ya0.cn">
     <!-- 如果目标网站不可访问，则跳转到维护页面 -->
     <script>
         window.onload = function() {
