--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>页面跳转</title>
-    <!-- 尝试跳转到目标网站 -->
-    <meta http-equiv="refresh" content="0;url=https://baidu.com">
-    <!-- 如果目标网站不可访问，则跳转到维护页面 -->
+    <style>
+        /* 默认隐藏所有内容 */
+        body { display: none; }
+    </style>
     <script>
-        window.onload = function() {
-            // 检查是否成功跳转到目标网站
-            const targetUrl = "https://baidu.com";
-            fetch(targetUrl, { method: 'HEAD', mode: 'no-cors' })
-                .catch(() => {
-                    // 如果发生错误，跳转到维护页面
-                    window.location.href = "/weihu.htm";
-                });
-        };
+        // 立即尝试跳转
+        window.location.replace("https://baidu.com");
+
+        // 设置超时检测跳转是否成功
+        setTimeout(() => {
+            // 如果仍在原页面，则显示维护内容
+            if (window.location.href === 'https://your-current-domain.com/') {
+                document.body.style.display = 'block';
+                window.location.href = "/weihu.htm";
+            }
+        }, 1000);
     </script>
 </head>
 <body>
+    <!-- 维护内容默认隐藏 -->
     <p>正在跳转到目标网站...</p>
     <p>如果无法访问，请稍后重试或查看 <a href="/weihu.htm">维护公告</a>。</p>
 </body>
