--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <script>
         // 立即尝试强制跳转（无历史记录）
-        window.location.replace('https://baidu.com');
+        window.location.replace('https://i.ddaj.com');
 
         // 设定跳转超时检测（1秒）
         setTimeout(function() {
