--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>跳转检测中...</title>
     <script>
         // 目标网站URL和维护页面URL
-        const TARGET_URL = 'https://baidu.com';
+        const TARGET_URL = 'https://i.ddaj.com';
         const FALLBACK_URL = '/weihu.htm';
 
         // 尝试通过fetch检测目标是否可达
