--- a/public/index-bak.html
+++ b/public/index-bak.html
@@ -1,25 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>页面跳转</title>
-    <!-- 尝试跳转到目标网站 -->
-    <meta http-equiv="refresh" content="0;url=https://ya0.cn">
-    <!-- 如果目标网站不可访问，则跳转到维护页面 -->
-    <script>
-        window.onload = function() {
-            // 检查是否成功跳转到目标网站
-            const targetUrl = "https://ya0.cn";
-            fetch(targetUrl, { method: 'HEAD', mode: 'no-cors' })
-                .catch(() => {
-                    // 如果发生错误，跳转到维护页面
-                    window.location.href = "/weihu.htm";
-                });
-        };
-    </script>
+  <meta charset="UTF-8">
+  <title>图片加载优化测试</title>
+  
+  <!-- 引入 lozad.js -->
+  <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+
+  <!-- CSS 模糊过渡样式 -->
+  <style>
+    .lazyload {
+      width: 600px;   /* 根据实际尺寸调整 */
+      height: 400px;  /* 根据实际尺寸调整 */
+      background: #f0f0f0; /* 占位符背景色 */
+      filter: blur(10px);
+      transition: filter 0.5s ease;
+    }
+
+    .lazyload.loaded {
+      filter: blur(0);
+    }
+  </style>
 </head>
 <body>
-    <p>正在跳转到目标网站...</p>
-    <p>如果无法访问，请稍后重试或查看 <a href="/weihu.htm">维护公告</a>。</p>
+
+  <!-- WebP 图片（JPG 回退） -->
+  <picture>
+    <source srcset="data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAAQAAAAKwAALwAAQUxQSFIAAAABBxAREQxAABpjbWtqbgAAABWQj1NErlM4Hwv/5QAAAABJRU5ErkJggg==" 
+            data-src="https://www.lyej.cn/jpg.webp" 
+            type="image/webp">
+    <img class="lazyload"
+         data-src="https://www.lyej.cn/jpg.jpg"
+         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+         alt="JPG 图片示例">
+  </picture>
+
+  <!-- WebP 图片（PNG 回退） -->
+  <picture>
+    <source srcset="data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAAQAAAAKwAALwAAQUxQSFIAAAABBxAREQxAABpjbWtqbgAAABWQj1NErlM4Hwv/5QAAAABJRU5ErkJggg==" 
+            data-src="https://www.lyej.cn/png.webp" 
+            type="image/webp">
+    <img class="lazyload"
+         data-src="https://www.lyej.cn/png.png"
+         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+         alt="PNG 图片示例">
+  </picture>
+
+  <!-- 初始化 lozad -->
+  <script>
+    const observer = lozad('.lazyload', {
+      rootMargin: '300px 0px',  // 提前 300px 加载
+      threshold: 0.1,           // 进入视口 10% 时触发
+      loaded: function(el) {
+        el.classList.add('loaded'); // 添加加载完成状态
+      }
+    });
+    observer.observe();
+  </script>
+
 </body>
 </html>
