--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <!-- WebP 图片（JPG 回退） -->
   <picture>
     <source srcset="data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAAQAAAAKwAALwAAQUxQSFIAAAABBxAREQxAABpjbWtqbgAAABWQj1NErlM4Hwv/5QAAAABJRU5ErkJggg==" 
-            data-src="https://www.lyej.cn/jpg.webp" 
+            data-src="jpg.webp" 
             type="image/webp">
     <img class="lazyload"
-         data-src="https://www.lyej.cn/jpg.jpg"
+         data-src="jpg.jpg"
          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
          alt="JPG 图片示例">
   </picture>
@@ -38,10 +38,10 @@
   <!-- WebP 图片（PNG 回退） -->
   <picture>
     <source srcset="data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAAQAAAAKwAALwAAQUxQSFIAAAABBxAREQxAABpjbWtqbgAAABWQj1NErlM4Hwv/5QAAAABJRU5ErkJggg==" 
-            data-src="https://www.lyej.cn/png.webp" 
+            data-src="png.webp" 
             type="image/webp">
     <img class="lazyload"
-         data-src="https://www.lyej.cn/png.png"
+         data-src="png.png"
          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
          alt="PNG 图片示例">
   </picture>
