--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <picture>
   <!-- AVIF 格式（更优压缩） -->
-  <source srcset="image.avif" type="image/avif">
+  <source srcset="jpg.avif" type="image/avif">
   <!-- WebP 格式 -->
-  <source srcset="image.webp" type="image/webp">
+  <source srcset="jpg.webp" type="image/webp">
   <!-- JPG 回退 -->
-  <img src="image.jpg" alt="AVIF 示例">
+  <img src="jpg.jpg" alt="AVIF 示例">
 </picture>
