--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="#home">首页</a>
                 <a href="#best-sellers">热销榜</a>
                 <a href="#categories">产品分类</a>
-                <a href="#about">评测标准</a>
+                <a href="https://www.dacu.net/?r=search?kw=%E8%8B%B9%E6%9E%9C%E8%93%9D%E7%89%99%E8%80%B3%E6%9C%BA">评测标准</a>
             </div>
         </nav>
     </header>
