--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             padding: 2rem;
         }
 
-        /* 嵌入内容样式 */
+        /* 嵌入内容容器 */
         .embedded-zone {
             border-radius: 8px;
             overflow: hidden;
@@ -63,22 +63,7 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             background: #fff;
             transition: all 0.3s ease;
-        }
-
-        .responsive-iframe {
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%;
-            position: relative;
-            border: none;
-        }
-
-        .responsive-iframe iframe {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
+            height: 60vh; /* 固定高度 */
         }
 
         /* 移动端优化 */
@@ -179,6 +164,9 @@
                         }
                         .embedded-zone iframe {
                             border: none !important;
+                            overflow: hidden !important;
+                        }
+                        body {
                             overflow: hidden !important;
                         }
                     `;
