--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <div class="hero-content" style="padding: 4rem 2rem">
                 <h1>专业蓝牙耳机评测</h1>
                 <p>基于500+小时实测数据，提供真实用户反馈与专业参数对比</p>
+                <img src="https://via.placeholder.com/800x400" alt="耳机评测场景" style="max-width:100%; border-radius:8px; margin:2rem 0">
             </div>
         </section>
 
