--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         }
 
         /* 移动端适配 */
-        @media (max-width: 768px) {
+        @media (max-width: 960px) {
             :root {
-                --iframe-height: 50vh;
+                --iframe-height: 100vh;
             }
             
             header {
@@ -103,10 +103,10 @@
         <nav>
             <div class="logo">LYEJ耳机精选</div>
             <div class="nav-links">
-                <a href="#home">首页</a>
-                <a href="#best-sellers">热销榜</a>
-                <a href="#categories">产品分类</a>
-                <a href="#about">评测标准</a>
+                <a href="https://www.dacu.net/?r=search?kw=OPPO蓝牙耳机">OPPO蓝牙耳机</a>
+                <a href="https://www.dacu.net/?r=search?kw=华为蓝牙耳机">华为蓝牙耳机</a>
+                <a href="https://www.dacu.net/?r=search?kw=小米蓝牙耳机">小米蓝牙耳机</a>
+                <a href="https://www.dacu.net/?r=search?kw=苹果蓝牙耳机">苹果蓝牙耳机</a>
             </div>
         </nav>
     </header>
@@ -117,7 +117,6 @@
             <div class="hero-content" style="padding: 4rem 2rem">
                 <h1>专业蓝牙耳机评测</h1>
                 <p>基于500+小时实测数据，提供真实用户反馈与专业参数对比</p>
-                <img src="https://via.placeholder.com/800x400" alt="耳机评测场景" style="max-width:100%; border-radius:8px; margin:2rem 0">
             </div>
         </section>
 
