--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LYEJ京东蓝牙耳机精选 | 降噪续航实测推荐</title>
-    <meta name="description" content="京东联盟官方精选！覆盖200-2000元全价位蓝牙耳机，专业评测团队实测降噪深度达42dB，续航最长50小时。提供苹果/华为/小米全品牌适配方案">
+    <meta name="description" content="京东官方精选！覆盖200-2000元全价位蓝牙耳机，专业评测团队实测降噪深度达42dB，续航最长50小时。提供苹果/华为/小米全品牌适配方案">
     <meta name="keywords" content="蓝牙耳机推荐,京东降噪耳机,高性价比耳机,运动蓝牙耳机,游戏耳机评测">
     
     <!-- 结构化数据 -->
@@ -151,13 +151,11 @@
 <body>
     <header>
         <nav>
-            <div class="logo">LYEJ耳机精选</div>
+            <div class="logo">蓝牙耳机精选</div>
             <div class="nav-links">
-                <a href="#" data-search="蓝牙耳机" class="active">全部蓝牙耳机</a>
-                <a href="#" data-search="OPPO蓝牙耳机">OPPO蓝牙耳机</a>
-                <a href="#" data-search="华为蓝牙耳机">华为蓝牙耳机</a>
-                <a href="#" data-search="小米蓝牙耳机">小米蓝牙耳机</a>
-                <a href="#" data-search="苹果蓝牙耳机">苹果蓝牙耳机</a>
+                <a href="#" data-search="华为耳机">华为耳机</a>
+                <a href="#" data-search="小米耳机">小米耳机</a>
+                <a href="#" data-search="苹果耳机">苹果耳机</a>
             </div>
         </nav>
     </header>
