--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@
         <nav>
             <div class="logo">蓝牙耳机精选</div>
             <div class="nav-links">
-                <a href="#" data-search="华为耳机">华为耳机</a>
-                <a href="#" data-search="小米耳机">小米耳机</a>
-                <a href="#" data-search="苹果耳机">苹果耳机</a>
+                <a href="#" data-search="耳机">更多耳机</a>
             </div>
         </nav>
     </header>
