--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>京东蓝牙耳机精选 | 降噪续航实测推荐 - lyej.cn</title>
-    <meta name="description" content="京东官方精选！覆盖200-2000元全价位蓝牙耳机，专业评测团队实测降噪深度达42dB，续航最长50小时。提供苹果/华为/小米全品牌适配方案">
-    <meta name="keywords" content="蓝牙耳机推荐,京东降噪耳机,高性价比耳机,运动蓝牙耳机,游戏耳机评测">
+    <title>【京东618必抢】蓝牙耳机隐藏优惠券+限时免单！主动降噪/运动款专享券/以旧换新补贴攻略 lyej.cn</title>
+    <meta name="description" content="京东蓝牙耳机优惠券,京东隐藏优惠领取,京东618耳机免单,京东PLUS会员耳机券,主动降噪耳机补贴,运动蓝牙耳机推荐,京东以旧换新耳机,白条免息购耳机,京东耳机必买清单,618耳机底价监控">
+    <meta name="keywords" content="大促网2025京东618蓝牙耳机终极攻略！每日更新隐藏优惠券/限时免单/PLUS会员专享券，独家曝光主动降噪耳机最高补500元、国补叠加免单技巧。实时监控跨店满减规则，提供白条12期免息及直播专属口令。618倒计时冲刺！立即抢购爆款→ lyej.cn">
     
     <!-- 结构化数据 -->
     <script type="application/ld+json">
