--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <nav>
             <div class="logo">蓝牙耳机精选</div>
             <div class="nav-links">
-                <a href="https://search.jd.com/Search?keyword=%e8%80%b3%e6%9c%ba&cu=true&utm_source=lianmeng__10__kong&utm_medium=tuiguang&utm_campaign=t_10170_&utm_term=fc791a4857534c1d97acfa85eeb38ea0">更多耳机</a>
+                <a href="https://u.jd.com/310lDgp">更多耳机</a>
             </div>
         </nav>
     </header>
@@ -163,7 +163,7 @@
         <section class="external-content">
             <iframe 
                 id="searchFrame"
-                src="https://search.jd.com/Search?keyword=%e8%93%9d%e7%89%99%e8%80%b3%e6%9c%ba&cu=true&utm_source=lianmeng__10__kong&utm_medium=tuiguang&utm_campaign=t_10170_&utm_term=2bedc31ee33e4028baef1be95b1bce6c"
+                src="https://u.jd.com/310lDgp"
                 title="蓝牙耳机搜索结果"
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
