--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <nav>
             <div class="logo">蓝牙耳机精选</div>
             <div class="nav-links">
-                <a href="https://u.jd.com/310lDgp">更多耳机</a>
+                <a href="https://u.jd.com/360lRmW">更多耳机</a>
             </div>
         </nav>
     </header>
